--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.1",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
     "node-fetch": "^3.3.2"
   }
 }
