--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1"
   }
 }
