--- a/Booth_Backend/vercel.json
+++ b/Booth_Backend/vercel.json
@@ -5,9 +5,8 @@
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/"
-      }
+        "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+    }
     ]
   }
   
