--- a/Booth_Backend/vercel.json
+++ b/Booth_Backend/vercel.json
@@ -1,12 +1,15 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "*.{js.jsx}", "use": "@vercel/node" }
-    ],
-    "routes": [
-      {
-        "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "*.js",
+      "use": "@vercel/node"
     }
-    ]
-  }
-  
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "destination": "/"
+    }
+  ]
+}
