--- a/Booth_Backend/vercel.json
+++ b/Booth_Backend/vercel.json
@@ -11,5 +11,13 @@
       "src": "/(.*)",
       "destination": "/"
     }
+  ],
+  "headers": [
+      {
+        "source": "/(.*)",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin", "value": "*" }
+        ]
+      } 
   ]
 }
