--- a/Booth_Backend/vercel.json
+++ b/Booth_Backend/vercel.json
@@ -23,5 +23,5 @@
       ]
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "dest": "/" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
