--- a/Booth_Backend/vercel.json
+++ b/Booth_Backend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api.js",
+      "src": "*.js",
       "use": "@vercel/node"
     }
   ],
@@ -22,6 +22,5 @@
         }
       ]
     }
-  ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  ]
 }
