--- a/Booth_Frontend/package.json
+++ b/Booth_Frontend/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "postcss": "^8.4.38",
     "query": "github:tanstack/react-query",
     "react": "^18.2.0",
